Workload/gx-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-workload
  namespace: gxdch
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gx-workload
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gx-workload
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy-alpine:v1.14.1
        imagePullPolicy: IfNotPresent
        args: ["-l", "debug", "--local-address-ip-version", "v4", "-c", "/run/envoy/envoy.yaml"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: envoy-config
          mountPath: "/run/envoy"
          readOnly: true
        - name: spire-agent-socket
          mountPath: /run/spire/sockets
          readOnly: true
      - env:
        - name: COMPLIANCE_URL
          value: "http://127.0.0.1:3000"
        image: alpine/curl
        imagePullPolicy: IfNotPresent
        command: ["sh"]
        args: ["-c", "while true; do echo hello; sleep 2000; done"]
        name: gx-workload
        ports:
        - containerPort: 3000
#         name: http-api
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: envoy-config
        configMap:
          name: workload-envoy
      - name: spire-agent-socket
        hostPath:
          path: /run/spire/sockets
          type: Directory
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
