Workload/workload-envoy-cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: workload-envoy
  namespace: gxdch
data:
  envoy.yaml: |
    node:
      id: "compliance"
      cluster: "ocp"
    static_resources:
      listeners:
      - name: outbound_proxy
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 3000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 1s
              codec_type: auto
              access_log:
              - name: envoy.file_access_log
                config:
                  path: "/tmp/outbound-proxy.log"
              stat_prefix: ingress_http
              route_config:
                name: service_route
                virtual_hosts:
                - name: outbound_proxy
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: compliance
              http_filters:
              - name: envoy.router
      clusters:
      - name: spire_agent
        connect_timeout: 0.25s
        http2_protocol_options: {}
        hosts:
          - pipe:
              path: /run/spire/sockets/agent.sock
      - name: compliance
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: gx-compliance-main
              port_value: 80
        tls_context:
          common_tls_context:
            tls_certificate_sds_secret_configs:
              - name: "spiffe://example.org/ns/gxdch/sa/default/gx-workload"
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
            combined_validation_context:
              # validate the SPIFFE ID of the server (recommended)
              default_validation_context:
                match_subject_alt_names:
                  exact: "spiffe://example.org/ns/gxdch/sa/default/gx-compliance-server-main"
              validation_context_sds_secret_config:
                name: "spiffe://example.org"
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
            tls_params:
              ecdh_curves:
                - X25519:P-256:P-521:P-384
